--- a/MyProfile.html
+++ b/MyProfile.html
@@ -47,7 +47,7 @@
                           
                           <p>In addition to my technical strengths, I bring a set of soft skills that include adaptability, strong communication, and a positive, goal-oriented mindset. I believe in continuous learning and have pursued certifications in Java, Full Stack Development, and IoT to stay updated with the latest tech trends. Fluent in Marathi, Hindi, and English, I’m eager to contribute to impactful projects and grow as a developer in a dynamic and innovative environment.</p>
                       </div>
-                      <div class="pro"><img src="../MyProfile/MyProfilePics/Chinmay_img.jpeg" alt=""></div>  
+                      <div class="pro"><img src="MyProfilePics/Chinmay_img.jpeg" alt=""></div>  
                       </div>    
                 </div>
 
